<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appBarView"
        layout="@layout/layout_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24"
        android:background="@drawable/rectangle_round_corners_white"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="@dimen/size_8"
        android:textColor="@color/primaryColor"
        android:textColorHint="@color/primaryColor"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toStartOf="@+id/lastNameEditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarView"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginEnd="@dimen/size_24"
        android:background="@drawable/rectangle_round_corners_white"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:padding="@dimen/size_8"
        android:textColor="@color/primaryColor"
        android:textColorHint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstNameEditText"
        app:layout_constraintTop_toTopOf="@id/firstNameEditText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginEnd="@dimen/size_24"
        android:background="@drawable/rectangle_round_corners_white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/size_8"
        android:textColor="@color/primaryColor"
        android:textColorHint="@color/primaryColor"
        app:layout_constraintBottom_toTopOf="@+id/githubLinkEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

    <EditText
        android:id="@+id/githubLinkEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_24"
        android:layout_marginEnd="@dimen/size_24"
        android:background="@drawable/rectangle_round_corners_white"
        android:hint="@string/github_link"
        android:inputType="textPersonName"
        android:padding="@dimen/size_8"
        android:textColor="@color/primaryColor"
        android:textColorHint="@color/primaryColor"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_round_corners_orange"
        android:paddingStart="@dimen/size_32"
        android:paddingEnd="@dimen/size_32"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/githubLinkEditText" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/inputViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="firstNameEditText, lastNameEditText, emailEditText, githubLinkEditText, submitButton" />
</androidx.constraintlayout.widget.ConstraintLayout>

